--- a/inst/www/custom.css
+++ b/inst/www/custom.css
@@ -1,8 +1,8 @@
-.main-header .logo {
-  font-family: "Georgia", Times, "Times New Roman", serif;
-  font-weight: bold;
-  font-size: 8px;
-}
+/* .main-header .logo { */
+/*   font-family: "Georgia", Times, "Times New Roman", serif; */
+/*   font-weight: bold; */
+/*   font-size: 8px; */
+/* } */
 
 #inline label{ display: table-cell; text-align: center; vertical-align: middle; }
 #inline .form-group { display: table-row;}
