inst, app: Add custom CSS.

--- a/inst/www/custom.css
+++ b/inst/www/custom.css
@@ -4,17 +4,25 @@
 /*   font-size: 8px; */
 /* } */
 
-#inline label{ display: table-cell; text-align: center; vertical-align: middle; }
-#inline .form-group { display: table-row;}
+
+:root {
+    --uni-gray: #4d4d4d;
+    --uni-red:  #ff1411;
+    --uni-blue: #00aadc;
+    --lt-gr-bg: #f2f2f2;
+}
+
+/* #inline label{ display: table-cell; text-align: center; vertical-align: middle; } */
+/* #inline .form-group { display: table-row;} */
 
 
-/* From SO 8565819 */
-#wrapper {
-  min-height: 100%;
-  height: auto !important;
-  height: 100%;
-  margin-bottom: -100px; /* <- If you change this height... */
-}
-#footer, #push {
-  height: 100px;         /* <- ...then you should also change this height! */
-}
+/* /\* From SO 8565819 *\/ */
+/* #wrapper { */
+/*   min-height: 100%; */
+/*   height: auto !important; */
+/*   height: 100%; */
+/*   margin-bottom: -100px; /\* <- If you change this height... *\/ */
+/* } */
+/* #footer, #push { */
+/*   height: 100px;         /\* <- ...then you should also change this height! *\/ */
+/* } */
