--- a/inst/www/custom.css
+++ b/inst/www/custom.css
@@ -30,5 +30,6 @@
 
 .plot-layout {
     display: grid;
-    grid-template-columns: 3fr 1fr
+    grid-template-columns: 3fr 1fr;
+    column-gap: 1em;
 }
